--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,6 +1,8 @@
 idplugin = 87
 min_version = 2017.901
 version = 148
-version_url = 'https://raw.githubusercontent.com/NeoRazorX/facturacion_base/master/facturascripts.ini'
-update_url = 'https://github.com/NeoRazorX/facturacion_base/archive/master.zip'
+#version_url = 'https://raw.githubusercontent.com/NeoRazorX/facturacion_base/master/facturascripts.ini'
+version_url = 'https://raw.githubusercontent.com/alejandroperezlopez/facturacion_base/master/facturascripts.ini'
+#update_url = 'https://github.com/NeoRazorX/facturacion_base/archive/master.zip'
+update_url = 'https://github.com/alejandroperezlopez/facturacion_base/archive/master.zip'
 wizard = 'base_wizard'
